update tests for BinaryTree